--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
       </div>
       <div class="main-content">
-        <section class="home section">
+        <section class="home section hidden">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -71,10 +71,62 @@
             </div>
           </div>
         </section>
+        <section class="about section">
+          <!-- <div class="contact-info">
+            <div class="container">
+              <h3 class="contact-info-header">Contact Info</h3>
+              <div class="contact-info-body">Body</div>
+              <div class="contact-info-buttons">AA</div>
+            </div>
+          </div> -->
+          <div class="container">
+            <div class="row">
+              <h2 class="section-title padd-15">About me</h2>
+            </div>
+            <div class="row">
+              <p class="about-text padd-15">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatum veritatis atque quia voluptate recusandae ad itaque,
+                asperiores maiores qui quo. Eveniet ullam necessitatibus quae
+                accusamus dicta, sunt nostrum repellat sapiente! Tenetur esse
+                vero placeat aliquam nulla perspiciatis voluptates molestiae
+                atque, impedit quia maxime soluta expedita sunt consequuntur
+                optio praesentium odit totam voluptatem maiores? Commodi officia
+                recusandae quia ullam, perspiciatis non? Laborum possimus quasi
+                harum ipsam, aspernatur corrupti alias temporibus, quae iure
+                minus, excepturi odit animi voluptatum? Tempora atque reiciendis
+                fugit harum? Magnam, ex soluta praesentium officiis quibusdam
+                exercitationem earum a. Recusandae iure nulla deserunt nihil a
+                optio quidem maxime voluptates eligendi, consequuntur dolores
+                perferendis laboriosam, mollitia eos ut facere quasi excepturi
+                hic expedita voluptate placeat officia tenetur cumque deleniti.
+                Nesciunt.
+              </p>
+            </div>
+            <div class="row">
+              <div class="about-buttons padd-15">
+                <a href="#" class="btn download-cv">Download CV</a>
+                <a href="#" class="btn hireme">Hire me!</a>
+                <a href="#" class="btn show-contact-info">Contact Info</a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="about-section experience padd-15">
+                <h3 class="about-section-title">Experience</h3>
+                <div class="timeline-box" id="experience"></div>
+              </div>
+              <div class="about-section education padd-15">
+                <h3 class="about-section-title">Education</h3>
+                <div class="timeline-box" id="education"></div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
 
     <!--- Scripts -->
     <script src="js/effects.js"></script>
+    <script src="js/renderer.js"></script>
   </body>
 </html>
