--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
       </div>
       <div class="main-content">
-        <section class="home section hidden">
+        <section class="home section">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -72,13 +72,42 @@
           </div>
         </section>
         <section class="about section">
-          <!-- <div class="contact-info">
-            <div class="container">
+          <div class="contact-info">
+            <div class="contact-info-container">
               <h3 class="contact-info-header">Contact Info</h3>
-              <div class="contact-info-body">Body</div>
-              <div class="contact-info-buttons">AA</div>
+              <div class="contact-info-body">
+                <div class="contact-info-item">
+                  <p>
+                    <i class="fa-solid fa-envelope"></i> Email:
+                    <a href="mailto:agusrive96@gmail.com" target="_blank"
+                      >agusrive96@gmail.com</a
+                    >
+                  </p>
+                </div>
+                <div class="contact-info-item">
+                  <p>
+                    <i class="fa-brands fa-linkedin"></i> LinkedIn:
+                    <a
+                      href="https://linkedin.com/in/agustin-rivero"
+                      target="_blank"
+                      >/agustin-rivero</a
+                    >
+                  </p>
+                </div>
+                <div class="contact-info-item">
+                  <p>
+                    <i class="fa-brands fa-github"></i> Github:
+                    <a href="https://github.com/ariveroi" target="_blank"
+                      >/ariveroi</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="contact-info-buttons">
+                <a href="#" class="btn close-contact-info">Close</a>
+              </div>
             </div>
-          </div> -->
+          </div>
           <div class="container">
             <div class="row">
               <h2 class="section-title padd-15">About me</h2>
@@ -119,6 +148,34 @@
                 <h3 class="about-section-title">Education</h3>
                 <div class="timeline-box" id="education"></div>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="projects section">
+          <div class="container">
+            <div class="row">
+              <h2 class="section-title padd-15">Projects</h2>
+            </div>
+            <div class="row">
+              <div class="projects-container"></div>
+            </div>
+          </div>
+        </section>
+        <section class="contact-certs section">
+          <div class="container" id="certifications">
+            <div class="row">
+              <h2 class="section-title padd-15">Certifications</h2>
+            </div>
+            <div class="row">
+              <div class="certifications-container">  
+            </div>
+          </div>
+          <!-- <div class="container" id="contact">
+            <div class="row">
+                <h2 class="section-title padd-15">Contact</h2>
+            </div>
+          </div> -->
+          </div>
             </div>
           </div>
         </section>
